# CaptureOS-plus

./: .env.example  .gitignore  CLAUDE.md  README.md  VERSIONS.md  docker-compose.pull.yml  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py  002_add_indexes_and_fts.py  002_add_tag_level.py  003_add_indexes_and_fts.py  004_update_fields.py  005_add_trgm_indexes.py  006_add_tag_is_active.py  007_add_project_new_fields.py  008_add_project_source_github_tool.py  009_issue_discovered_date_to_datetime.py  010_all_date_fields_to_datetime.py  011_add_file_attachment_table.py
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  base.py  dashboard.py  decisions.py  entity_relations.py  experiences.py  export.py  export_word.py  file_attachments.py  import_data.py  issues.py  knowledge.py  projects.py  relations.py  reviews.py  search.py  solutions.py  suggestions.py  tags.py  timeline.py  upload.py
backend/app/models/: __init__.py  decision.py  experience.py  file_attachment.py  issue.py  knowledge.py  project.py  relation.py  review.py  solution.py  tag.py
backend/app/schemas/: __init__.py  decision.py  experience.py  issue.py  knowledge.py  project.py  relation.py  review.py  solution.py  tag.py
backend/uploads/: 5785051cfb46.docx  f7eebd6893b7
frontend/: Dockerfile  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BeijingTime.tsx  ConfirmDialog.tsx  (+14 more)
(+22 files in other folders)
