[project]
name = "captureos-backend"
version = "0.1.0"
description = "Personal Asset OS Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "asyncpg",
    "psycopg2-binary",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
